<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>upcreate3_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for UP Create 3</description>
  <maintainer email="giovannididio.bruno@gmail.com">up</maintainer>
  <license>MIT</license>


  <depend>irobot_create_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
