<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>upcreate3_control</name>
  <version>0.1.0</version>
  <description>UP Create 3 package for controls</description>
  <maintainer email="giovannididio.bruno@gmail.com">giovannididio.bruno@gmail.com</maintainer>
  <license>MIT</license>

  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>twist_mux</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
